--- a/src/homePage.css
+++ b/src/homePage.css
@@ -4,7 +4,7 @@ html {
   width: 100vw;
   padding: 0;
   margin: 0;
-  font-family: "Fredoka", "Poppins", sans-serif !important;
+  font-family: "Poppins", "Fredoka", sans-serif !important;
 }
 
 .bg {
@@ -53,7 +53,7 @@ h3 {
 .top-left {
   position: fixed;
   top: 2vh;
-  left: 2vh;
+  left: 3vh;
 }
 
 .top-right {
@@ -69,9 +69,13 @@ h3 {
   transform: translate(-50%, -50%);
 }
 
-.block-text h1,
-h2 {
-  display: inline;
+#time-div {
+  display: flex;
+  justify-content: center;
+}
+#time {
+  font-size: 240px;
+  font-weight: 400;
 }
 
 .quote {
@@ -87,9 +91,11 @@ h2 {
   font-size: 1.5vw;
 }
 
-#apps {
+#sidebarOpenbtn {
+  cursor: pointer;
+  background-color: transparent;
   color: white;
-  font-size: 28px;
+  font-size: 24px;
 }
 
 .weather {
@@ -106,11 +112,19 @@ h2 {
   text-align: right;
 }
 
-#time {
-  font-size: 240px;
-}
-
 #greetings {
   text-align: center;
   padding: 24px;
+}
+
+#settingsBtn {
+  position: fixed;
+  bottom: 24px;
+  left: 24px;
+  font-size: 24px;
+  color: white;
+}
+#settingsBtn:hover {
+  text-shadow: 0 0 10px grey;
+  cursor: pointer;
 }
