--- a/src/homePage.css
+++ b/src/homePage.css
@@ -92,6 +92,7 @@ h3 {
 }
 
 #sidebarOpenbtn {
+  display: block;
   cursor: pointer;
   background-color: transparent;
   color: white;
@@ -120,7 +121,7 @@ h3 {
 #settingsBtn {
   position: fixed;
   bottom: 24px;
-  left: 24px;
+  left: 16px;
   font-size: 24px;
   color: white;
 }
