--- a/src/sidebar/sidebar.css
+++ b/src/sidebar/sidebar.css
@@ -12,7 +12,10 @@
 }
 
 .sidebar a {
-  padding: 8px 24px 8px 24px;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
   text-decoration: none;
   font-size: 24px;
   color: #818181;
