--- a/src/settingsModal/settingsModal.css
+++ b/src/settingsModal/settingsModal.css
@@ -5,9 +5,9 @@
   z-index: 1; /* Sit on top */
   padding: 0px;
   left: 0;
-  bottom: 0;
-  width: 40%; /* Full width */
-  height: 40%; /* Full height */
+  bottom: 56px;
+  width: 40%;
+  /* height: 40%; */
   overflow-y: auto;
   overflow-x: hidden;
   background-color: rgb(0, 0, 0); /* Fallback color */
@@ -74,12 +74,17 @@
   color: white;
 }
 
-.modal-body {
-  padding: 2px 16px;
-}
-
 .modal-footer {
   padding: 2px 16px;
   background-color: #5cb85c;
   color: white;
+}
+
+.eachModalContent {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 2px 16px;
+  font-size: 16px;
+  height: 24px;
 }
