--- a/src/sidebar/sidebar.css
+++ b/src/sidebar/sidebar.css
@@ -1,43 +1,128 @@
-.sidebar {
+/* .sidebar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   height: 100%;
   width: 0;
   position: fixed;
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
+  background-color: rgba(0, 0, 0, 0.8);
   overflow-x: hidden;
-  transition: 0.5s;
+  transition: 0.2s;
   padding-top: 8px;
-}
+} */
 
-.sidebar a {
-  padding-left: 16px;
-  padding-right: 16px;
-  padding-top: 8px;
-  padding-bottom: 8px;
+/* .sidebar a {
+  margin-top: 8px;
+  margin-bottom: 8px;
+  text-decoration: none;
+  font-size: 16px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+} */
+/* .sidebar a:hover {
+  color: #f1f1f1;
+}
+#defaultLinks {
+  fill: #818181;
+  transition: 0.3s;
+  margin-top: 4px;
+}
+#defaultLinks:hover {
+  fill: #f1f1f1;
+} */
+
+/* #addLinkIconButton {
+  margin-top: 16px;
+  margin-bottom: 16px;
   text-decoration: none;
   font-size: 24px;
   color: #818181;
   display: block;
   transition: 0.3s;
 }
+#addLinkIconButton:hover {
+  color: #f1f1f1;
+  cursor: pointer;
+} */
+
+.sidebar {
+  display: none;
+  flex-direction: column;
+  /* align-items: center; */
+  border-radius: 8px;
+  width: 240px;
+  position: fixed;
+  z-index: 1;
+  left: 12px;
+  top: 0px;
+  background-color: rgba(0, 0, 0, 0.8);
+  overflow-x: hidden;
+  padding-top: 16px;
+  padding-bottom: 8px;
+  /* transform: translateX(100%);
+  transition: transform 0.3s ease-in-out; */
+  /* animation: anim; */
+  animation-duration: 0.2s;
+  animation-name: slideDown;
+  animation-fill-mode: forwards;
+}
+@keyframes slideDown {
+  0% {
+    top: 0px;
+    opacity: 0%;
+  }
+  100% {
+    top: 48px;
+  }
+}
+
+.favicon {
+  height: 16px;
+  width: 16px;
+  /* margin: 0 5px 0 -1px; */
+  display: inline-block;
+  vertical-align: top;
+}
+.sidebar a {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  text-decoration: none;
+  font-size: 16px;
+  color: #b2b2b2;
+  display: block;
+  margin-left: 16px;
+  /* transition: 0.3s; */
+}
+.sidebar a:first-child {
+  margin-left: 14px;
+}
 .sidebar a:hover {
   color: #f1f1f1;
 }
-.sidebar a svg {
-  fill: #818181;
-  display: block;
-  transition: 0.3s;
-  padding: 8px 0px 8px 0px;
+.sidebar a > svg {
+  fill: #b2b2b2;
 }
-.sidebar a svg:hover {
+.sidebar a:hover > svg {
   fill: #f1f1f1;
 }
 
-#main {
-  transition: margin-left 0.5s;
-  padding: 16px;
+#addLinkIconButton {
+  margin-top: 5px;
+  margin-left: 16px;
+  margin-bottom: 16px;
+  text-decoration: none;
+  font-size: 16px;
+  color: #939393;
+  display: block;
+  transition: 0.3s;
+}
+#addLinkIconButton:hover {
+  color: #f1f1f1;
+  cursor: pointer;
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@@ -48,4 +133,77 @@
   .sidebar a {
     font-size: 18px;
   }
+}
+
+/* ================================================================================================================= */
+/* ================================================================================================================= */
+/* ================================================================================================================= */
+/* The "add new link" modal */
+.addLinkModal {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  top: 12px;
+  left: 68px;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 2;
+  width: 280px;
+  color: #f1f1f1;
+  border-radius: 12px;
+}
+
+.addLinkModal p {
+  margin: 0px;
+  padding: 0px;
+  margin-left: 24px;
+  margin-right: auto;
+  font-size: 16px;
+}
+
+.linkInput {
+  padding: 0.5rem;
+  font-size: 1rem;
+  font-weight: 400;
+  width: 220px;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid #717171;
+  color: #fff;
+  transition: all 0.25s ease 0s;
+  background-color: transparent;
+}
+.linkInput:focus {
+  border-bottom: 1px solid white;
+}
+
+.buttonGroup {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+.buttonGroup button {
+  font-size: 16px;
+  width: 90px;
+  height: 30px;
+  border: none;
+  outline: none;
+  color: white;
+  border-radius: 25px;
+}
+.buttonGroup :nth-child(1) {
+  background-color: rgb(202, 46, 46);
+  margin-right: auto;
+}
+.buttonGroup :nth-child(1):hover {
+  background-color: rgb(114, 26, 26);
+  cursor: pointer;
+}
+.buttonGroup :nth-child(2) {
+  background-color: rgb(31, 129, 31);
+  margin-left: 28px;
+}
+.buttonGroup :nth-child(2):hover {
+  background-color: rgb(21, 85, 21);
+  cursor: pointer;
 }
