--- a/src/sidebar/sidebar.css
+++ b/src/sidebar/sidebar.css
@@ -8,7 +8,7 @@
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.16);
   overflow-x: hidden;
   transition: 0.2s;
   padding-top: 8px;
@@ -49,26 +49,26 @@
   cursor: pointer;
 } */
 
-.sidebar {
+#sidebar {
+  transition: max-height 1s, width 1s;
   display: none;
-  flex-direction: column;
-  /* align-items: center; */
+  flex-direction: row;
   border-radius: 8px;
   width: 240px;
   position: fixed;
   z-index: 1;
   left: 12px;
   top: 0px;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.7);
   overflow-x: hidden;
-  padding-top: 16px;
-  padding-bottom: 8px;
+  padding: 16px;
   /* transform: translateX(100%);
   transition: transform 0.3s ease-in-out; */
   /* animation: anim; */
   animation-duration: 0.2s;
   animation-name: slideDown;
   animation-fill-mode: forwards;
+  max-height: auto;
 }
 @keyframes slideDown {
   0% {
@@ -79,131 +79,50 @@
     top: 48px;
   }
 }
-
-.favicon {
-  height: 16px;
-  width: 16px;
-  /* margin: 0 5px 0 -1px; */
-  display: inline-block;
-  vertical-align: top;
+#sidebar.next {
+  height: auto;
+  top: 48px;
+  animation-duration: 0.2s;
+  animation-name: makeLong;
 }
-.sidebar a {
-  margin-top: 5px;
-  margin-bottom: 5px;
-  text-decoration: none;
-  font-size: 16px;
-  color: #b2b2b2;
-  display: block;
-  margin-left: 16px;
-  /* transition: 0.3s; */
-}
-.sidebar a:first-child {
-  margin-left: 14px;
-}
-.sidebar a:hover {
-  color: #f1f1f1;
-}
-.sidebar a > svg {
-  fill: #b2b2b2;
-}
-.sidebar a:hover > svg {
-  fill: #f1f1f1;
-}
-
-#addLinkIconButton {
-  margin-top: 5px;
-  margin-left: 16px;
-  margin-bottom: 16px;
-  text-decoration: none;
-  font-size: 16px;
-  color: #939393;
-  display: block;
-  transition: 0.3s;
-}
-#addLinkIconButton:hover {
-  color: #f1f1f1;
-  cursor: pointer;
-}
-
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-  .sidebar {
-    padding-top: 15px;
+@keyframes makeLong {
+  0% {
+    height: 0px;
+    overflow: hidden;
   }
-  .sidebar a {
-    font-size: 18px;
+  100% {
+    height: 220px;
+    overflow: hidden;
   }
 }
 
-/* ================================================================================================================= */
-/* ================================================================================================================= */
-/* ================================================================================================================= */
-/* The "add new link" modal */
-.addLinkModal {
-  display: none;
-  flex-direction: column;
-  align-items: center;
-  position: absolute;
-  top: 12px;
-  left: 68px;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 2;
-  width: 280px;
-  color: #f1f1f1;
-  border-radius: 12px;
-}
-
-.addLinkModal p {
-  margin: 0px;
-  padding: 0px;
-  margin-left: 24px;
-  margin-right: auto;
-  font-size: 16px;
-}
-
-.linkInput {
-  padding: 0.5rem;
-  font-size: 1rem;
-  font-weight: 400;
-  width: 220px;
-  border: none;
-  outline: none;
-  border-bottom: 1px solid #717171;
-  color: #fff;
-  transition: all 0.25s ease 0s;
-  background-color: transparent;
-}
-.linkInput:focus {
-  border-bottom: 1px solid white;
-}
-
-.buttonGroup {
+#linksModal {
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  /* transition: left 0.5s ease-out; */
 }
-.buttonGroup button {
-  font-size: 16px;
-  width: 90px;
-  height: 30px;
-  border: none;
-  outline: none;
-  color: white;
-  border-radius: 25px;
+#addLinkModal {
+  display: none;
+  width: 100%;
+  height: 100%;
+  /* transition: right 0.5s ease-out; */
 }
-.buttonGroup :nth-child(1) {
-  background-color: rgb(202, 46, 46);
-  margin-right: auto;
+
+#sidebar.showPage2 #page1 {
+  left: -100%;
 }
-.buttonGroup :nth-child(1):hover {
-  background-color: rgb(114, 26, 26);
-  cursor: pointer;
+#sidebar.showPage2 #page2 {
+  left: 0%;
 }
-.buttonGroup :nth-child(2) {
-  background-color: rgb(31, 129, 31);
-  margin-left: 28px;
-}
-.buttonGroup :nth-child(2):hover {
-  background-color: rgb(21, 85, 21);
-  cursor: pointer;
+
+#linksDiv {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
