--- a/src/settingsModal/settingsModal.css
+++ b/src/settingsModal/settingsModal.css
@@ -1,31 +1,25 @@
-/* The Modal (background) */
-.modal {
+#settingsModal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
   padding: 0px;
   left: 0;
-  bottom: 56px;
-  width: 40%;
-  /* height: 40%; */
-  overflow-y: auto;
-  overflow-x: hidden;
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0); /* Black w/ opacity */
+  bottom: 48px;
+  width: 400px;
+  overflow-y: none;
+  color: #b2b2b2;
+  margin: 12px;
 }
 
 /* Modal Content */
 .modal-content {
   position: relative;
-  background-color: #fefefe;
+  background-color: rgba(0, 0, 0, 0.7);
   margin: auto;
   padding: 0;
-  /* margin-left: 72px; */
-  border: 1px solid #888;
   width: 100%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  -webkit-animation-name: animatetop;
-  -webkit-animation-duration: 0.4s;
+  padding: 12px 0px 12px 0px;
+  border-radius: 12px;
   animation-name: animatetop;
   animation-duration: 0.4s;
 }
@@ -53,25 +47,31 @@
   }
 }
 
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 2px 16px;
+  color: #b2b2b2;
+  font-size: 24px;
+  margin: 0px;
+  padding: 0;
+}
+.modal-header h4 {
+  margin: 2px 16px 16px 16px;
+}
+
 /* The Close Button */
 .close {
-  color: white;
-  float: right;
+  color: #b2b2b2;
   font-size: 28px;
   font-weight: bold;
+  margin-right: 16px;
 }
-
 .close:hover,
 .close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.modal-header {
-  padding: 2px 16px;
-  background-color: #5cb85c;
   color: white;
+  cursor: pointer;
 }
 
 .modal-footer {
@@ -85,6 +85,7 @@
   flex-direction: row;
   justify-content: space-between;
   padding: 2px 16px;
+  margin: 8px 0px;
   font-size: 16px;
   height: 24px;
 }
