--- a/src/css/eachLink.css
+++ b/src/css/eachLink.css
@@ -11,7 +11,7 @@
   vertical-align: top;
 }
 
-#sidebar a {
+#linksModal a {
   /* height: 20px; */
   flex-basis: 90%;
   margin-bottom: 10px;
@@ -23,16 +23,16 @@
   transition: 0.3s;
 }
 
-#sidebar a:first-child {
+#linksModal a:first-child {
   margin-left: 0px;
 }
-#sidebar a:hover {
+#linksModal a:hover {
   color: #f1f1f1;
 }
-#sidebar a > svg {
+#linksModal a > svg {
   fill: #b2b2b2;
 }
-#sidebar a:hover > svg {
+#linksModal a:hover > svg {
   fill: #f1f1f1;
 }
 
