--- a/src/css/homePage.css
+++ b/src/css/homePage.css
@@ -1,3 +1,12 @@
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 body {
   height: 100vh;
   width: 100vw;
@@ -5,6 +14,10 @@ body {
   margin: 0;
   font-family: "Poppins", "Fredoka", sans-serif;
   text-shadow: 0 1px 5px rgb(0 0 0 / 10%);
+  /* ANIMATION STUFF */
+  animation: fadeInAnimation ease 1s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
 }
 p {
   font-size: 20px;
@@ -105,7 +118,7 @@ h3 {
   font-size: 1.5vw;
 }
 
-#sidebarOpenbtn {
+#linksModalOpenBtn {
   display: block;
   cursor: pointer;
   background-color: transparent;
