--- a/src/css/linksModal.css
+++ b/src/css/linksModal.css
@@ -49,7 +49,7 @@
   cursor: pointer;
 } */
 
-#sidebar {
+#linksModal {
   transition: max-height 1s, width 1s;
   display: none;
   flex-direction: row;
@@ -57,10 +57,10 @@
   width: 240px;
   position: fixed;
   z-index: 1;
-  left: 12px;
+  left: 48px;
   top: 0px;
   background-color: rgba(0, 0, 0, 0.7);
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   padding: 16px;
   /* transform: translateX(100%);
   transition: transform 0.3s ease-in-out; */
@@ -68,7 +68,6 @@
   animation-duration: 0.2s;
   animation-name: slideDown;
   animation-fill-mode: forwards;
-  max-height: auto;
 }
 @keyframes slideDown {
   0% {
@@ -79,7 +78,7 @@
     top: 48px;
   }
 }
-#sidebar.next {
+#linksModal.next {
   height: auto;
   top: 48px;
   animation-duration: 0.2s;
@@ -96,13 +95,37 @@
   }
 }
 
-#linksModal {
+#links {
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 100%;
   /* transition: left 0.5s ease-out; */
 }
+
+#moreOptionsDialog {
+  display: none;
+  position: fixed;
+  flex-direction: column;
+  padding: 8px 0px 8px 0px;
+  background-color: black;
+  border-radius: 4px;
+}
+#moreOptionsDialog.show {
+  display: flex;
+}
+
+#moreOptionsDialog button {
+  background-color: black;
+  padding: 4px 8px 4px 8px;
+  color: white;
+  border: none;
+}
+#moreOptionsDialog button:hover {
+  background-color: #323232;
+  cursor: pointer;
+}
+
 #addLinkModal {
   display: none;
   width: 100%;
