--- a/src/view/homePage.html
+++ b/src/view/homePage.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="homePage.css" />
-    <link rel="stylesheet" href="./settingsModal/settingsModal.css" />
-    <link rel="stylesheet" href="./sidebar/sidebar.css" />
-    <link rel="stylesheet" href="./sidebar/eachLink.css" />
-    <link rel="stylesheet" href="./sidebar/newLinkModal.css" />
+    <link rel="stylesheet" href="../css/homePage.css" />
+    <link rel="stylesheet" href="../css/settingsModal.css" />
+    <link rel="stylesheet" href="../css/linksModal.css" />
+    <link rel="stylesheet" href="../css/eachLink.css" />
+    <link rel="stylesheet" href="../css/newLinkModal.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Poppins&display=swap" rel="stylesheet"> -->
@@ -23,7 +23,7 @@
   <body>
     <div class="bg">
       <div class="top-left">
-        <i class="bi bi-grid" id="sidebarOpenbtn"></i>
+        <i class="bi bi-grid" id="linksModalOpenBtn"></i>
       </div>
 
       <div class="text-right top-right weather">
@@ -52,11 +52,11 @@
     <!---------------------------------------------------------------------------------------------------------------->
     <!---------------------------------------------------------------------------------------------------------------->
     <!-- SideBar -->
-    <div id="sidebar">
+    <div id="linksModal">
       <!-- LinksDiv with addLink button -->
       <div id="linksDiv">
         <!-- only links reside here, in this div -->
-        <div id="linksModal">
+        <div id="links">
           <a href="chrome://apps/" class="local">
             <svg id="defaultLinks" viewBox="0 0 20 20" width="16" height="16">
               <path
@@ -70,7 +70,7 @@
             </svg>
             <span>&nbsp;Apps</span>
           </a>
-          <div class="linkItem">
+          <!-- <div class="linkItem">
             <a href="https://twitter.com">
               <img
                 class="favicon"
@@ -95,12 +95,18 @@
             <div class="linkMoreOptions" id="linkMoreOptions222">
               <i class="bi bi-three-dots"></i>
             </div>
-          </div>
+          </div> -->
         </div>
         <div id="addLinkIconButton">
           <i class="bi bi-plus-circle"></i>
           <span>&nbsp;Add link</span>
         </div>
+      </div>
+
+      <!-- More Options Dialog On Side Of Each Link -->
+      <div id="moreOptionsDialog">
+        <button id="editLinkButton">Edit</button>
+        <button id="deleteLinkButton">Delete</button>
       </div>
       <!-- AddLink -->
       <div id="addLinkModal">
@@ -128,35 +134,34 @@
     <!-- The Modal -->
     <div id="settingsModal" class="modal">
       <!-- Modal content -->
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4>Settings</h4>
-          <span class="close">&times;</span>
-        </div>
-        <div class="eachModalContent">
-          <span>Select your font:&nbsp;&nbsp;&nbsp;</span>
-          <select name="fontSelect" id="fontSelect">
-            <option value="Poppins">Poppins</option>
-            <option value="Fredoka">Fredoka</option>
-          </select>
-        </div>
-        <div class="eachModalContent">
-          <span>Time format:&nbsp;&nbsp;&nbsp;</span>
-          <select name="fontSelect" id="fontSelect">
-            <option value="12">12</option>
-            <option value="24">24</option>
-          </select>
-        </div>
-        <div class="eachModalContent">
-          <span>Select your font:&nbsp;&nbsp;&nbsp;</span>
-          <select name="fontSelect" id="fontSelect">
-            <option value="Poppins">Poppins</option>
-            <option value="Fredoka">Fredoka</option>
-          </select>
-        </div>
-        <!-- <div class="modal-footer">
-          <h4>Modal Footer</h4>
-        </div> -->
+      <div class="modal-header">
+        <h4>Settings</h4>
+        <span class="close">&times;</span>
+      </div>
+      <div class="eachModalContent">
+        <span>Select your font:&nbsp;&nbsp;&nbsp;</span>
+        <select name="fontSelect" id="fontSelect">
+          <option value="Poppins">Poppins</option>
+          <option value="Fredoka">Fredoka</option>
+        </select>
+      </div>
+      <div class="eachModalContent">
+        <span>Time format:&nbsp;&nbsp;&nbsp;</span>
+        <select name="timeFormatSelect" id="timeFormatSelect">
+          <option value="12">12</option>
+          <option value="24">24</option>
+        </select>
+      </div>
+      <div class="eachModalContent">
+        <span>Select your font:&nbsp;&nbsp;&nbsp;</span>
+        <select name="fontSelect" id="fontSelect">
+          <option value="Poppins">Poppins</option>
+          <option value="Fredoka">Fredoka</option>
+        </select>
+      </div>
+      <div class="eachModalContent">
+        <span>Choose background directory:&nbsp;&nbsp;&nbsp;</span>
+        <button id="openFile">Select</button>
       </div>
     </div>
 
@@ -164,9 +169,12 @@
     <!---------------------------------------------------------------------------------------------------------------->
     <!---------------------------------------------------------------------------------------------------------------->
     <!-- Scripts -->
-    <script src="./homePage.js"></script>
-    <script src="../background.js"></script>
-    <script src="./settingsModal/settingsModal.js"></script>
-    <script src="./sidebar/sidebar.js"></script>
+    <script src="../repository/settingsRepository.js"></script>
+    <script src="../../data.js"></script>
+    <script src="../../background.js"></script>
+    <script src="../services/logger.js"></script>
+    <script src="../services/settingsModal.js"></script>
+    <script src="../services/linksModal.js"></script>
+    <script src="../services/homePage.js"></script>
   </body>
 </html>
