--- a/src/view/homePage.html
+++ b/src/view/homePage.html
@@ -122,7 +122,10 @@
         <p>Link</p>
         <input class="linkInput" type="text" id="linkLinksInput" name="link" />
         <br />
-        <button id="saveLinkButton">Save</button>
+        <div class="buttonGroup">
+          <button id="saveLinkButton">Save</button>
+          <button id="updateLinkButton">Update</button>
+        </div>
       </div>
     </div>
 
