--- a/src/css/linksModal.css
+++ b/src/css/linksModal.css
@@ -90,7 +90,7 @@
     overflow: hidden;
   }
   100% {
-    height: 220px;
+    height: 210px;
     overflow: hidden;
   }
 }
@@ -108,7 +108,7 @@
   position: fixed;
   flex-direction: column;
   padding: 8px 0px 8px 0px;
-  background-color: black;
+  background-color: #222222;
   border-radius: 4px;
 }
 #moreOptionsDialog.show {
@@ -116,21 +116,14 @@
 }
 
 #moreOptionsDialog button {
-  background-color: black;
-  padding: 4px 8px 4px 8px;
+  background-color: #222222;
+  padding: 8px 16px 8px 16px;
   color: white;
   border: none;
 }
 #moreOptionsDialog button:hover {
   background-color: #323232;
   cursor: pointer;
-}
-
-#addLinkModal {
-  display: none;
-  width: 100%;
-  height: 100%;
-  /* transition: right 0.5s ease-out; */
 }
 
 #sidebar.showPage2 #page1 {
