moved $ to helpers

--- a/src/view/homePage.html
+++ b/src/view/homePage.html
@@ -172,6 +172,7 @@
     <!---------------------------------------------------------------------------------------------------------------->
     <!---------------------------------------------------------------------------------------------------------------->
     <!-- Scripts -->
+    <script src="../helpers/domManipulation.js"></script>
     <script src="../repository/settingsRepository.js"></script>
     <script src="../../data.js"></script>
     <script src="../../background.js"></script>
