--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -1,30 +1,53 @@
 .sidebar {
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-  height: 100%;
-  width: 0;
+  height: fit-content;
+  width: 48px;
   position: fixed;
   z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.16);
+  left: 0px;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.9);
   overflow-x: hidden;
   transition: 0.2s;
-  padding-top: 8px;
+  padding: 6px 0px;
+  border-radius: 8px;
+  animation-duration: 0.3s;
+  animation-name: slideRight;
+  animation-fill-mode: forwards;
 }
+@keyframes slideRight {
+  0% {
+    left: 0px;
+  }
+  100% {
+    left: 8px;
+  }
+}
+/* .sidebar.show {
+  display: flex;
+} */
 
-.sidebar a {
-  margin-top: 8px;
-  margin-bottom: 8px;
+.sidebarLinks {
+  margin-top: 2px;
+  margin-bottom: 2px;
   text-decoration: none;
-  font-size: 16px;
-  color: #818181;
+  font-size: 20px;
+  color: #c2c2c2;
+  /* background-color: rgba(33, 39, 45, 255); */
+  padding: 6px 8px;
+  border-radius: 4px;
   display: block;
   transition: 0.3s;
 }
-.sidebar a:hover {
-  color: #f1f1f1;
+.sidebarLinks:hover {
+  /* color: #f1f1f1; */
+  box-shadow: 0px 1px 2px rgba(160, 160, 160, 0.2);
+  /* border: 1px solid rgba(39, 45, 51, 255); */
+  background-color: rgba(30, 36, 42, 1);
 }
 #defaultLinks {
   fill: #818181;
@@ -35,15 +58,6 @@
   fill: #f1f1f1;
 }
 
-#addLinkIconButton {
-  margin-top: 16px;
-  margin-bottom: 16px;
-  text-decoration: none;
-  font-size: 24px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
 #addLinkIconButton:hover {
   color: #f1f1f1;
   cursor: pointer;
