--- a/src/view/homePage.html
+++ b/src/view/homePage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/components.css" />
     <link rel="stylesheet" href="../css/homePage.css" />
     <link rel="stylesheet" href="../css/settingsModal.css" />
     <link rel="stylesheet" href="../css/sidebar.css" />
@@ -135,16 +136,40 @@
     <!---------------------------------------------------------------------------------------------------------------->
     <!-- SideBar -->
     <div class="sidebar">
-      <a href="#">
+      <a href="" id="openYoutube" class="sidebarLinks">
+        <i class="bi bi-youtube"></i>
+      </a>
+      <a href="" id="openWhatsapp" class="sidebarLinks">
+        <i class="bi bi-whatsapp"></i>
+      </a>
+      <a href="" id="openDiscord" class="sidebarLinks">
+        <i class="bi bi-discord"></i>
+      </a>
+      <a href="" class="sidebarLinks">
         <i class="bi bi-alarm"></i>
       </a>
-      <a href="#">
+      <a href="" class="sidebarLinks">
         <i class="bi bi-alarm"></i>
       </a>
-      <a href="#">
+      <a href="" class="sidebarLinks">
         <i class="bi bi-alarm"></i>
       </a>
-      <a href="#">
+      <a href="" class="sidebarLinks">
+        <i class="bi bi-alarm"></i>
+      </a>
+      <a href="" class="sidebarLinks">
+        <i class="bi bi-alarm"></i>
+      </a>
+      <a href="" class="sidebarLinks">
+        <i class="bi bi-alarm"></i>
+      </a>
+      <a href="" class="sidebarLinks">
+        <i class="bi bi-alarm"></i>
+      </a>
+      <a href="" class="sidebarLinks">
+        <i class="bi bi-alarm"></i>
+      </a>
+      <a href="" class="sidebarLinks">
         <i class="bi bi-alarm"></i>
       </a>
     </div>
@@ -153,7 +178,9 @@
     <!---------------------------------------------------------------------------------------------------------------->
     <!---------------------------------------------------------------------------------------------------------------->
     <!-- Settings Button -->
-    <i class="bi bi-gear" id="settingsBtn"></i>
+    <div class="bottom-left">
+      <i class="bi bi-gear" id="settingsBtn"></i>
+    </div>
     <!-- The Modal -->
     <div id="settingsModal" class="modal">
       <!-- Modal content -->
@@ -161,30 +188,45 @@
         <h4>Settings</h4>
         <span class="close">&times;</span>
       </div>
-      <div class="eachModalContent">
-        <span>Select your font:&nbsp;&nbsp;&nbsp;</span>
-        <select name="fontSelect" id="fontSelect">
-          <option value="Poppins">Poppins</option>
-          <option value="Fredoka">Fredoka</option>
-        </select>
-      </div>
-      <div class="eachModalContent">
-        <span>Time format:&nbsp;&nbsp;&nbsp;</span>
-        <select name="timeFormatSelect" id="timeFormatSelect">
-          <option value="12">12</option>
-          <option value="24">24</option>
-        </select>
-      </div>
-      <div class="eachModalContent">
-        <span>Select your font:&nbsp;&nbsp;&nbsp;</span>
-        <select name="fontSelect" id="fontSelect">
-          <option value="Poppins">Poppins</option>
-          <option value="Fredoka">Fredoka</option>
-        </select>
-      </div>
-      <div class="eachModalContent">
-        <span>Choose background directory:&nbsp;&nbsp;&nbsp;</span>
-        <button id="openFile">Select</button>
+      <div class="modalContent">
+        <div class="tabs">
+          <button class="tabLinks" id="general">General</button>
+          <button class="tabLinks" id="theme">Theme</button>
+          <button class="tabLinks" id="sidebar">Sidebar</button>
+          <button class="tabLinks" id="clock">Clock</button>
+        </div>
+        <div class="tabContent">
+          <section id="generalTabContent">
+            <div class="tabSubContents">
+              <span>Select your font:&nbsp;&nbsp;&nbsp;</span>
+              <select name="fontSelect" id="fontSelect">
+                <option value="Poppins">Poppins</option>
+                <option value="Fredoka">Fredoka</option>
+              </select>
+            </div>
+            <div class="tabSubContents">
+              <span>Time format:&nbsp;&nbsp;&nbsp;</span>
+              <select name="timeFormatSelect" id="timeFormatSelect">
+                <option value="12">12</option>
+                <option value="24">24</option>
+              </select>
+            </div>
+          </section>
+          <section id="themeTabContent">
+            <div class="tabSubContents">
+              <span>Show SideBar:&nbsp;&nbsp;&nbsp;</span>
+              <input type="checkbox" id="showSidebar" />
+            </div>
+          </section>
+          <section id="sidebarTabContent"></section>
+          <section id="clockTabContent"></section>
+          <!-- <div class="tabSubContents"></div>
+          <div class="tabSubContents"></div>
+          <div class="tabSubContents">
+            <span>Choose background directory:&nbsp;&nbsp;&nbsp;</span>
+            <button id="openFile">Select</button>
+          </div> -->
+        </div>
       </div>
     </div>
 
@@ -198,10 +240,15 @@
     <script src="../helpers/domManipulation.js"></script>
     <script src="../helpers/links.js"></script>
 
+    <!-- Repositories -->
     <script src="../repository/settingsRepository.js"></script>
+
+    <!-- Services -->
     <script src="../../data.js"></script>
     <script src="../../background.js"></script>
-    <script src="../services/settingsModal.js"></script>
+    <script src="../services/showOrHide.js"></script>
+    <script src="../services/sidebar.js"></script>
+    <script src="../services/settingsService.js"></script>
     <script src="../services/linksModal.js"></script>
     <script src="../services/homePage.js"></script>
   </body>
