--- a/src/css/homePage.css
+++ b/src/css/homePage.css
@@ -105,7 +105,7 @@ h3 {
 
 #greetings {
   text-align: center;
-  padding: 0px;
+  padding: 20px 0px 0px 0px;
   font-size: 48px;
   font-weight: 100;
 }
