--- a/src/view/homePage.html
+++ b/src/view/homePage.html
@@ -39,9 +39,9 @@
           <!-- <h1 id="time"></h1> -->
 
           <div class="analogClock">
-            <div class="hand hour" id="dataHourHand"></div>
-            <div class="hand minute" id="dataMinuteHand"></div>
-            <div class="hand second" id="dataSecondHand"></div>
+            <div class="hand hour" id="hoursHand"></div>
+            <div class="hand minute" id="minutesHand"></div>
+            <div class="hand second" id="secondsHand"></div>
           </div>
           <!-- <div class="circle"></div> -->
           <!-- <h2 id="ampm">AM</h2> -->
