--- a/src/css/analogClock.css
+++ b/src/css/analogClock.css
@@ -33,6 +33,8 @@
   left: 50%;
   transform-origin: bottom;
   z-index: 10;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 .analogClock .hand.second {
   height: 47%;
