--- a/src/css/homePage.css
+++ b/src/css/homePage.css
@@ -155,6 +155,16 @@ h3 {
   width: 48px;
 }
 
+.bottom-right {
+  position: fixed;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  bottom: 16px;
+  right: 8px;
+  width: 48px;
+}
+
 #settingsBtn {
   font-size: 24px;
   color: white;
