--- a/src/view/homePage.html
+++ b/src/view/homePage.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/homePage.css" />
     <link rel="stylesheet" href="../css/analogClock.css" />
     <link rel="stylesheet" href="../css/settingsModal.css" />
+    <link rel="stylesheet" href="../css/todoListModal.css" />
     <link rel="stylesheet" href="../css/sidebar.css" />
     <link rel="stylesheet" href="../css/linksModal.css" />
     <link rel="stylesheet" href="../css/eachLink.css" />
@@ -223,6 +224,33 @@
     <!---------------------------------------------------------------------------------------------------------------->
     <!---------------------------------------------------------------------------------------------------------------->
     <!---------------------------------------------------------------------------------------------------------------->
+    <!-- Todo List Button -->
+    <div class="bottom-right">
+      <!-- <i class="bi bi-gear" id="settingsBtn"></i> -->
+      <button id="openTodoList">Todo</button>
+    </div>
+    <!-- The Modal -->
+    <div id="todoListModal" class="modal">
+      <!-- Modal content -->
+      <div id="myDIV" class="header">
+        <h4>My To Do List</h4>
+      </div>
+
+      <ul id="myUL">
+        <li>Hit the gym</li>
+        <li class="checked">Pay bills</li>
+        <li>Meet George</li>
+        <li>Buy eggs</li>
+        <li>Read a book</li>
+        <li>Organize office</li>
+      </ul>
+      <input type="text" id="myInput" placeholder="Title..." />
+      <span id="addNewElement" class="addBtn">Add</span>
+    </div>
+
+    <!---------------------------------------------------------------------------------------------------------------->
+    <!---------------------------------------------------------------------------------------------------------------->
+    <!---------------------------------------------------------------------------------------------------------------->
     <!-- Scripts -->
 
     <!-- Helpers -->
@@ -240,6 +268,7 @@
     <script src="../services/showOrHide.js"></script>
     <script src="../services/sidebar.js"></script>
     <script src="../services/clockService.js"></script>
+    <script src="../services/todoListService.js"></script>
     <script src="../services/settingsService.js"></script>
     <script src="../services/linksModal.js"></script>
     <script src="../services/homePage.js"></script>
