--- a/src/css/analogClock.css
+++ b/src/css/analogClock.css
@@ -1,10 +1,3 @@
-.circle {
-  border: 2px solid white;
-  /* background-color: #ffffff; */
-  height: 400px;
-  width: 400px;
-  border-radius: 50%;
-}
 .analogClock {
   border: 2px solid white;
   /* background-color: #ffffff; */
@@ -12,7 +5,17 @@
   width: 300px;
   border-radius: 50%;
   position: relative;
+  animation: fadeIn 1s;
 }
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .analogClock::after {
   content: "";
   position: absolute;
