--- a/src/css/homePage.css
+++ b/src/css/homePage.css
@@ -94,13 +94,22 @@ h3 {
   display: flex;
   justify-content: center;
 }
-#time {
+#digitalClock {
   font-size: 170px;
   font-weight: 100;
   letter-spacing: -5px;
   text-align: center;
   /* text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1), 2px 2px 2px rgba(0, 0, 0, 0.1); */
   user-select: none;
+  animation: fadeIn 1s;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 #greetings {
