--- a/src/css/todoListModal.css
+++ b/src/css/todoListModal.css
@@ -87,15 +87,15 @@ ul li.checked {
   text-decoration: line-through;
 }
 
-/* Style the close button */
-.closeTodoModal {
-  padding: 0px 6px;
-  font-size: 24px;
+/* Style the delete button */
+.deleteTodoModal {
+  margin: 2px;
+  padding: 0px 5px;
+  font-size: 20px;
 }
-
-.closeTodoModal:hover {
-  /* background-color: #f44336; */
-  color: #c0352b;
+.deleteTodoModal:hover {
+  background-color: #f44336;
+  border-radius: 50%;
 }
 
 #inputArea {
@@ -103,7 +103,7 @@ ul li.checked {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin: 4px 0px;
+  margin: 4px 0px 0px 0px;
 }
 
 /* Style the input */
