--- a/src/view/homePage.html
+++ b/src/view/homePage.html
@@ -78,32 +78,6 @@
             </svg>
             <span>&nbsp;Apps</span>
           </a>
-          <!-- <div class="linkItem">
-            <a href="https://twitter.com">
-              <img
-                class="favicon"
-                src="https://t0.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=https://www.twitter.com&size=16"
-                alt=""
-              />
-              <span>&nbsp;Twitter</span>
-            </a>
-            <div class="linkMoreOptions" id="linkMoreOptions111">
-              <i class="bi bi-three-dots"></i>
-            </div>
-          </div>
-          <div class="linkItem" id="222">
-            <a href="https://youtube.com">
-              <img
-                class="favicon"
-                src="https://t0.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=https://www.youtube.com&size=16"
-                alt=""
-              />
-              <span>&nbsp;Youtube</span>
-            </a>
-            <div class="linkMoreOptions" id="linkMoreOptions222">
-              <i class="bi bi-three-dots"></i>
-            </div>
-          </div> -->
         </div>
         <div id="addLinkIconButton">
           <i class="bi bi-plus-circle"></i>
@@ -239,12 +213,12 @@
       </div>
 
       <ul id="myUL">
-        <li>Hit the gym</li>
+        <!-- <li>Hit the gym</li>
         <li class="checked">Pay bills</li>
         <li>Meet George</li>
         <li>Buy eggs</li>
         <li>Read a book</li>
-        <li>Organize office</li>
+        <li>Organize office</li> -->
       </ul>
       <div id="inputArea">
         <input type="text" id="myInput" placeholder="Add Todo..." />
