--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -6,7 +6,7 @@
   z-index: 1;
   padding: 4px;
   /* transform: translateY(-50%); */
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: rgb(70, 45, 45);
   overflow: hidden;
   transition: 0.2s;
 
@@ -14,6 +14,7 @@
   animation-duration: 0.3s;
   /* animation-name: slideRight; */
   animation-fill-mode: forwards;
+  /* backdrop-filter: blur(30px); */
 }
 
 /* .sidebar.show {
@@ -64,12 +65,16 @@
   border-radius: 4px;
   display: block;
   transition: 0.3s;
+  border: 1px solid rgba(39, 45, 51, 0);
 }
 .sidebarLinks:hover {
   /* color: #f1f1f1; */
-  box-shadow: 0px 1px 2px rgba(160, 160, 160, 0.2);
-  /* border: 1px solid rgba(39, 45, 51, 255); */
-  background-color: rgba(30, 36, 42, 1);
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.05);
+  /* background-color: rgba(30, 36, 42, 1); */
+  /* background-color: rgba(100, 40, 40, 0.2); */
+  /* background: rgba(0, 0, 0, 0.8); */
+  backdrop-filter: invert(0.1);
 }
 #defaultLinks {
   fill: #818181;
